# PureReason

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.md.backup  RELEASE-v0.3.1-INSTRUCTIONS.md  docker-compose.yml  pyproject.toml
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_failure.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark-ci.yml  epistemic-regression.yml  lint.yml  release.yml
benchmarks/: audit_corpus_leak.py  benchmark_leak_audit.py  benchmark_sources.json  claim_gate.py  download_benchmarks.py  protocol.yaml  run_benchmarks.py  run_downloaded_benchmarks.py  run_math_arithmetic.py  run_reasoning_verification.py  triz_validation.py
benchmarks/detectors/: __init__.py  core.py  felm_bench.py  felm_oracles.py  hallulens.py  hallumix.py  halueval.py  logicbench.py  (+6 more)
crates/pure-reason-api/: Cargo.toml
crates/pure-reason-api/src/: main.rs  sla.rs
crates/pure-reason-bench/: Cargo.toml
crates/pure-reason-bench/src/: main.rs
crates/pure-reason-cli/: Cargo.toml
crates/pure-reason-cli/src/: main.rs
crates/pure-reason-cli/src/commands/: analyze.rs  antinomy.rs  apperceive.rs  calibrate.rs  categorize.rs  certify.rs  claims.rs  compliance.rs  critique.rs  feedback.rs  game.rs  illusion.rs  mod.rs  multiagent.rs  paralogism.rs  pipeline.rs  red_team.rs  regulate.rs  review.rs  schema.rs  self_audit.rs  sla.rs  train.rs  validate.rs  validate_decision.rs
crates/pure-reason-core/: Cargo.toml
crates/pure-reason-core/src/: adaptive_weighting.rs  api_gateway.rs  apperception.rs  assumption_validation.rs  auth.rs  auto_calibration.rs  batch_processor.rs  benchmark_integration.rs  benchmark_publisher.rs  calibration.rs  causal_reasoning.rs  certificate.rs  chain_of_thought.rs  claims.rs  claims_validation.rs  competitive_analysis.rs  compliance.rs  confidence_calibration.rs  confidence_thresholding.rs  contradiction_detector.rs  counterargument_synthesis.rs  counterfactual_reasoner.rs  dialogue.rs  domain.rs  domain_calibration.rs  domain_config.rs  domain_governance.rs  domain_prompts.rs  domain_rules.rs  ensemble_verifier.rs  error.rs  error_analyzer.rs  feedback.rs  human_feedback.rs  imagination.rs  integration_tests_phase35.rs  lib.rs  math_solver.rs  meta_learner.rs  meta_learner_v2.rs  (+31 more)
crates/pure-reason-core/src/aesthetic/: mod.rs  segmenter.rs  space.rs  structured.rs  time.rs
crates/pure-reason-core/src/analytic/: categories.rs  judgments.rs  mod.rs  principles.rs  schematism.rs
crates/pure-reason-core/src/dialectic/: antinomies.rs  coverage.rs  ideal.rs  ideas.rs  mod.rs  paralogisms.rs  regulative.rs  semantic_field.rs
crates/pure-reason-core/src/methodology/: architectonic.rs  canon.rs  discipline.rs  mod.rs
crates/pure-reason-core/src/wittgenstein/: family_resemblance.rs  language_games.rs  mod.rs  rule_following.rs  tractatus.rs
crates/pure-reason-core/tests/: test_domain_config.rs  triz_integration.rs
crates/pure-reason-dashboard/: Cargo.toml
crates/pure-reason-dashboard/src/: main.rs
crates/pure-reason-kb/: Cargo.toml
crates/pure-reason-kb/src/: constants.rs  entities.rs  lib.rs  symbolic.rs
crates/pure-reason-mcp/: Cargo.toml
crates/pure-reason-mcp/src/: main.rs
crates/pure-reason-memory/: Cargo.toml
crates/pure-reason-memory/src/: error.rs  lib.rs  store.rs
crates/pure-reason-memory/tests/: evidence_store_tests.rs
crates/pure-reason-py/: Cargo.toml  pyproject.toml
crates/pure-reason-py/pure_reason/: __init__.py  autogen.py  crewai.py  exceptions.py  langchain.py  llamaindex.py  pipeline.py
crates/pure-reason-py/src/: lib.rs
crates/pure-reason-py/tests/: test_integrations.py
crates/pure-reason-runtime/: Cargo.toml
crates/pure-reason-runtime/src/: error.rs  executor.rs  lib.rs  local_state.rs  store.rs  types.rs
crates/pure-reason-runtime/tests/: runtime_tests.rs
crates/pure-reason-trace/: Cargo.toml
crates/pure-reason-trace/src/: error.rs  ids.rs  lib.rs  store.rs  types.rs
crates/pure-reason-trace/tests/: trace_store_tests.rs
crates/pure-reason-verifier/: Cargo.toml
crates/pure-reason-verifier/src/: lib.rs  triz_verifier.rs
data/: misconceptions_corpus_v1.jsonl  misconceptions_corpus_v2.jsonl  op_classifier.npz  op_train.jsonl  priors.yaml  syllogism_clf.pkl
docker/: api.Dockerfile  dashboard.Dockerfile
docs/: ADR-001.md  ADR-002.md  ARCHITECTURE-IMPROVEMENTS.md  BENCHMARK-QUICK-REFERENCE.md  BENCHMARK.md  BENCHMARKING.md  CAPABILITIES.md  CODE-REVIEW.md  COMPETITIVE-ANALYSIS.md  COMPLETION-REPORT.md  EXECUTIVE-SUMMARY.md  INTEGRATION-COMPLETE.md  MCP-INTEGRATION.md  MCP-QUICK-REFERENCE.md  METHODOLOGY.md  MIGRATION-GUIDE.md  NE-2-PHASE-3-RESULTS.md  NEURAL-MODELS-IMPLEMENTATION.md  PHASE-A2-PLAN.md  PHASE-B-PLAN.md  PHASE-B-RESULTS.md  PHASE-C-PLAN.md  PHASE-C-RESULTS.md  PHASE-D-RESULTS.md  README.md  REPRODUCIBILITY.md  SCALE-2-COMPLETE.md  SCALE-2-FINAL-SUMMARY.md  SCALE2-PHASE-A.md  SCALE2-ROADMAP.md  SESSION-SUMMARY.md  TRIZ-42.md  TRIZ-IMPLEMENTATION.md  VERIFICATION-QUALITY-IMPROVEMENTS.md  capabilities.json  domain-calibration-design.md  meta-learner-v2-design.md  wikipedia-corpus-schema.md
domains/: general.yaml  medical.yaml
examples/: Dockerfile.api  README.md  api_server.py  epistemic-test-suite.json  langchain_integration.py  mcp-test.sh  simple_verification.py
pureason/: __init__.py  _cli.py  _core.py  _models.py  guard.py
results/: benchmark-results-2026-04-30.json  triz_validation_results.json
scripts/: build_bm25_index.py  extract_priors_to_jsonl.py  mine_failures.py  model_inference.py  prepare_phase_b_data.py  process_wikipedia_corpus.py  release-check.sh  semantic_inference.py  source_wikipedia_misconceptions.py  train_distilbert.py  train_op_classifier.py  train_syllogism_classifier.py  validate_priors.py
tests/: test_arithmetic.py  test_chain.py  test_guard.py  test_mcq.py  test_models.py  test_semantic_fallback.py  test_triz_integration.py  test_z3utils.py
(+16 files in other folders)
