[package]
name = "pure-reason-api"
description = "REST API server for the PureReason Kantian reasoning system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pure-reason-api"
path = "src/main.rs"

[features]
# Outbound webhook delivery (HTTPS POST to user-registered URLs).
# OFF by default so the default build has no outbound HTTP and the README's
# "offline by default" claim is accurate. See TRIZ-42 NE-12.
default = []
webhooks = []

[dependencies]
pure-reason-core = { path = "../pure-reason-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
