[package]
name = "pure-reason-core"
description = "Kant's Critique of Pure Reason as a structured reasoning library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
blake3 = { workspace = true }
subtle = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
pure-reason-kb = { path = "../pure-reason-kb" }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
