[package]
name = "pure-reason-kb"
description = "Compiled knowledge base for PureReason: physical constants, numeric bounds, entity facts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
