[package]
name = "pure-reason-mcp"
description = "Model Context Protocol (MCP) server for the PureReason Kantian reasoning system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pure-reason-mcp"
path = "src/main.rs"

[dependencies]
pure-reason-core = { path = "../pure-reason-core" }
pure-reason-memory = { path = "../pure-reason-memory" }
pure-reason-runtime = { path = "../pure-reason-runtime" }
pure-reason-trace = { path = "../pure-reason-trace" }
pure-reason-verifier = { path = "../pure-reason-verifier" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
