[package]
name = "pure-reason-memory"
description = "Local evidence store for PureReason review workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pure-reason-trace = { path = "../pure-reason-trace" }
pure-reason-verifier = { path = "../pure-reason-verifier" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
