[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pure-reason"
version = "0.1.0"
description = "Kant's Critique of Pure Reason as a Python reasoning library for epistemic validation of LLM outputs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "ai-safety", "epistemics", "kant", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
crewai = ["crewai>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]
all = ["langchain-core>=0.1.0", "llama-index-core>=0.10.0", "crewai>=0.1.0", "pyautogen>=0.2.0"]

[tool.maturin]
python-source = "."
module-name = "pure_reason"
features = ["pyo3/extension-module"]
