[package]
name = "pure-reason-runtime"
description = "Task state machine, workflow executor, and trace-wired runtime skeleton for PureReason"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pure-reason-trace = { path = "../pure-reason-trace" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
rusqlite    = { workspace = true }

[dev-dependencies]
tempfile = "3"
