[package]
name = "pure-reason-trace"
description = "Append-only trace/event foundation for PureReason gateway, runtime, and verification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
