[package]
name = "pure-reason-verifier"
description = "Local-first synchronous verifier service for PureReason"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pure-reason-core = { path = "../pure-reason-core" }
pure-reason-trace = { path = "../pure-reason-trace" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"

[dev-dependencies]
tempfile = "3"
